# tau_ffi

./: README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/xyz/canardoux/tau_ffi_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: tau_ffi.podspec
ios/Classes/: tau_ffi.c
lib/: tau_ffi.dart  tau_ffi_bindings_generated.dart
linux/: CMakeLists.txt
macos/: tau_ffi.podspec
src/: CMakeLists.txt  tau_ffi.c  titi  toto
windows/: CMakeLists.txt
