# The Flutter tooling requires that developers have CMake 3.10 or later
# installed. You should not increase this version, as doing so will cause
# the plugin to fail to compile for some customers of the plugin.
cmake_minimum_required(VERSION 3.10)

project(tau_ffi_library VERSION 0.0.1 LANGUAGES C)

add_library(tau_ffi SHARED
  "tau_ffi.c"
    
  webaudio/analyser_handler.cc
  webaudio/analyser_node.cc
  webaudio/async_audio_decoder.cc
  webaudio/audio_basic_processor_handler.cc
  webaudio/audio_basic_processor_handler_test.cc
  webaudio/audio_buffer.cc
  webaudio/audio_buffer_source_handler.cc
  webaudio/audio_buffer_source_node.cc
  webaudio/audio_context.cc
  webaudio/audio_context_autoplay_test.cc
  webaudio/audio_context_test.cc
  webaudio/audio_destination_handler.cc
  webaudio/audio_destination_node.cc
  webaudio/audio_graph_tracer.cc
  webaudio/audio_handler.cc
  webaudio/audio_listener.cc
  webaudio/audio_listener_handler.cc
  webaudio/audio_node.cc
  webaudio/audio_node_input.cc
  webaudio/audio_node_input_test.cc
  webaudio/audio_node_output.cc
  webaudio/audio_node_wiring.cc
  webaudio/audio_param.cc
  webaudio/audio_param_handler.cc
  webaudio/audio_param_map.cc
  webaudio/audio_param_timeline.cc
  webaudio/audio_playout_stats.cc
  webaudio/audio_processing_event.cc
  webaudio/audio_scheduled_source_handler.cc
  webaudio/audio_scheduled_source_node.cc
  webaudio/audio_sink_info.cc
  webaudio/audio_summing_junction.cc
  webaudio/audio_worklet.cc
  webaudio/audio_worklet_global_scope.cc
  webaudio/audio_worklet_global_scope_test.cc
  webaudio/audio_worklet_handler.cc
  webaudio/audio_worklet_messaging_proxy.cc
  webaudio/audio_worklet_node.cc
  webaudio/audio_worklet_object_proxy.cc
  webaudio/audio_worklet_processor.cc
  webaudio/audio_worklet_processor_definition.cc
  webaudio/audio_worklet_thread_test.cc
  webaudio/base_audio_context.cc
  webaudio/biquad_dsp_kernel.cc
  webaudio/biquad_dsp_kernel_test.cc
  webaudio/biquad_filter_handler.cc
  webaudio/biquad_filter_node.cc
  webaudio/biquad_processor.cc
  webaudio/channel_merger_handler.cc
  webaudio/channel_merger_node.cc
  webaudio/channel_splitter_handler.cc
  webaudio/channel_splitter_node.cc
  webaudio/constant_source_handler.cc
  webaudio/constant_source_node.cc
  webaudio/convolver_handler.cc
  webaudio/convolver_node.cc
  webaudio/convolver_node_test.cc
  webaudio/deferred_task_handler.cc
  webaudio/delay_handler.cc
  webaudio/delay_node.cc
  webaudio/dynamics_compressor_handler.cc
  webaudio/dynamics_compressor_node.cc
  webaudio/dynamics_compressor_node_test.cc
  webaudio/gain_handler.cc
  webaudio/gain_node.cc
  webaudio/iir_dsp_kernel.cc
  webaudio/iir_filter_handler.cc
  webaudio/iir_filter_node.cc
  webaudio/iir_processor.cc
  webaudio/inspector_helper_mixin.cc
  webaudio/inspector_web_audio_agent.cc
  webaudio/media_element_audio_source_handler.cc
  webaudio/media_element_audio_source_node.cc
  webaudio/media_stream_audio_destination_handler.cc
  webaudio/media_stream_audio_destination_node.cc
  webaudio/media_stream_audio_source_handler.cc
  webaudio/media_stream_audio_source_node.cc
  webaudio/offline_audio_completion_event.cc
  webaudio/offline_audio_context.cc
  webaudio/offline_audio_destination_handler.cc
  webaudio/offline_audio_destination_node.cc
  webaudio/offline_audio_worklet_thread.cc
  webaudio/oscillator_handler.cc
  webaudio/oscillator_node.cc
  webaudio/panner_handler.cc
  webaudio/panner_node.cc
  webaudio/periodic_wave.cc
  webaudio/realtime_analyser.cc
  webaudio/realtime_audio_destination_handler.cc
  webaudio/realtime_audio_destination_node.cc
  webaudio/realtime_audio_worklet_thread.cc
  webaudio/script_processor_handler.cc
  webaudio/script_processor_node.cc
  webaudio/script_processor_node_test.cc
  webaudio/semi_realtime_audio_worklet_thread.cc
  webaudio/setsinkid_resolver.cc
  webaudio/stereo_panner_handler.cc
  webaudio/stereo_panner_node.cc
  webaudio/stereo_panner_node_test.cc
  webaudio/wave_shaper_dsp_kernel.cc
  webaudio/wave_shaper_handler.cc
  webaudio/wave_shaper_node.cc
  webaudio/wave_shaper_processor.cc
)

set_target_properties(tau_ffi PROPERTIES
  PUBLIC_HEADER tau_ffi.h
  OUTPUT_NAME "tau_ffi"
)

target_compile_definitions(tau_ffi PUBLIC DART_SHARED_LIB)
